# casm_sky

./: .gitignore  INSTALL.md  Makefile  config.yaml  install-launchd.sh  install-service.sh  main.py  pyproject.toml  skyrfi.html
static/css/: skyrfi.css  template.css
static/js/: skyrfi.js
template/: template.html
