[project]
name = "casm-sky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124.4",
    "healpy>=1.19.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pygdsm>=1.6.4",
    "pyyaml>=6.0.3",
    "skyfield>=1.53",
    "uvicorn>=0.38.0",
]
