[project]
name = "casm-sky"
version = "0.1.0"
description = "CASM Sky Tracking Server - Real-time astronomy visualization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "healpy>=1.16.0,<2.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0,<2.0",
    "pandas>=1.3.0",
    "pygdsm>=1.5.0",
    "pyyaml>=6.0",
    "skyfield>=1.45",
    "uvicorn>=0.20.0",
]
